--- a/packages/front/public/index.html
+++ b/packages/front/public/index.html
@@ -39,5 +39,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      // 用于开发
+      // 生产的时候设置为 1
+      window.$multiple = 1 * 2 * 100 / 11520 + 'vw';
+
+      window.$parseMultiple = function(base){
+        return (base || 1) * parseFloat(window.$multiple) + 'vw';
+      };
+    </script>
   </body>
 </html>
